--- a/PR030-ImagenCapturaEscalaMediaStore/gradle/wrapper/gradle-wrapper.properties
+++ b/PR030-ImagenCapturaEscalaMediaStore/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Apr 27 08:31:39 CEST 2016
+#Mon Feb 20 13:40:09 CET 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.14.1-all.zip
