--- a/PR096-NotificationStyles/build.gradle
+++ b/PR096-NotificationStyles/build.gradle
@@ -4,8 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.android.tools.build:gradle:2.2.3'
     }
 }
 
@@ -14,3 +13,12 @@ allprojects {
         jcenter()
     }
 }
+
+ext {
+    compileSdkVersion = 25
+    minSdkVersion = 14
+    buildToolsVersion = "25.0.2"
+    support_library_version = "25.1.1"
+    butterknife_version = "8.5.1"
+}
+
