--- a/PR174-JobScheduler/build.gradle
+++ b/PR174-JobScheduler/build.gradle
@@ -7,8 +7,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'me.tatarka:gradle-retrolambda:3.3.0'
+        classpath 'me.tatarka:gradle-retrolambda:3.5.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -24,15 +23,10 @@ allprojects {
 ext {
     compileSdkVersion = 25
     minSdkVersion = 14
-    buildToolsVersion = "25.0.1"
+    buildToolsVersion = "25.0.2"
+    retrolambdaVersion = "3.5.0"
     support_library_version = "25.1.1"
-    picasso_version = "2.5.2"
-    circleimageview_version = "2.1.0"
     butterknife_version = "8.5.1"
-    stetho_version = "1.4.2"
-    textdrawable_version = "1.0.1"
-    leakcanary_version = "1.5"
-    glide_version = "3.7.0"
     junit_version = "4.12"
 }
 
