--- a/PR038-GrabarSonidoIntent/app/src/main/AndroidManifest.xml
+++ b/PR038-GrabarSonidoIntent/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="es.iessaladillo.pedrojoya.pr038">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
