--- a/PR199-RetrofitYandexDagger/build.gradle
+++ b/PR199-RetrofitYandexDagger/build.gradle
@@ -6,8 +6,6 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'me.tatarka:gradle-retrolambda:3.3.0'
-
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,6 +16,20 @@ allprojects {
     repositories {
         jcenter()
     }
+}
+
+ext {
+    compileSdkVersion = 25
+    minSdkVersion = 16
+    buildToolsVersion = "25.0.2"
+    support_library_version = "25.2.0"
+    stetho_version = "1.4.2"
+    junit_version = "4.12"
+    chuck_version = "1.0.0"
+    okhttp_version = "3.6.0"
+    gson_version = "2.8.0"
+    retrofit_version = "2.1.0"
+    dagger_version = "2.9"
 }
 
 task clean(type: Delete) {
