--- a/PR005-IntentsExplicitos/app/src/main/AndroidManifest.xml
+++ b/PR005-IntentsExplicitos/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
-            android:name=".MainActivity"
+            android:name=".main.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,13 +19,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AlumnoActivity"
+            android:name=".editalumno.EditAlumnoActivity"
             android:label="@string/app_name"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".main.MainActivity"
+            android:windowSoftInputMode="adjustPan"
             tools:ignore="UnusedAttribute">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value=".main.MainActivity" />
         </activity>
     </application>
 
