--- a/PR156-Parcelable/app/src/main/AndroidManifest.xml
+++ b/PR156-Parcelable/app/src/main/AndroidManifest.xml
@@ -10,8 +10,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:name=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,13 +18,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AlumnoActivity"
-            android:label="@string/app_name"
-            android:parentActivityName=".MainActivity"
+            android:name=".editalumno.EditAlumnoActivity"
+            android:parentActivityName=".main.MainActivity"
             tools:ignore="UnusedAttribute">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value=".main.MainActivity" />
         </activity>
     </application>
 
