--- a/PR106-RecyclerView/app/build.gradle
+++ b/PR106-RecyclerView/app/build.gradle
@@ -24,6 +24,12 @@ android {
     }
 }
 
+allprojects {
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
@@ -32,6 +38,7 @@ dependencies {
     compile "com.android.support:cardview-v7:$rootProject.ext.support_library_version"
     compile "com.squareup.picasso:picasso:$rootProject.ext.picasso_version"
     compile "de.hdodenhof:circleimageview:$rootProject.ext.circleimageview_version"
+    compile 'com.github.moove-it:fakeit:v0.2'
 
     testCompile "junit:junit:$rootProject.ext.junit_version"
     androidTestCompile("com.android.support.test.espresso:espresso-core:$rootProject.ext.espresso_version", {
