--- a/PR106-RecyclerView/app/src/main/AndroidManifest.xml
+++ b/PR106-RecyclerView/app/src/main/AndroidManifest.xml
@@ -4,16 +4,19 @@
           package="pedrojoya.iessaladillo.es.pr106" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/appl_name"
         android:theme="@style/AppTheme"
         android:supportsRtl="true"
-        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning"
+        tools:replace="android:label">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/appl_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
