--- a/PR158-Realm/app/src/main/AndroidManifest.xml
+++ b/PR158-Realm/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
-            android:name=".MainActivity">
+            android:name=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -23,13 +23,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DetalleActivity"
-            android:parentActivityName=".MainActivity"
+            android:name=".detalle.DetalleActivity"
+            android:parentActivityName=".main.MainActivity"
             android:theme="@style/DetalleTheme"
             tools:ignore="UnusedAttribute">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value=".main.MainActivity" />
         </activity>
     </application>
 
