--- a/PR039-SoundPool/app/src/main/AndroidManifest.xml
+++ b/PR039-SoundPool/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning"
+        android:fullBackupContent="@xml/backup_descriptor">
         <activity
             android:name="es.iessaladillo.pedrojoya.pr039.MainActivity"
             android:label="@string/app_name" >
