--- a/PR040-JSON/build.gradle
+++ b/PR040-JSON/build.gradle
@@ -2,35 +2,25 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
 ext {
-    compileSdkVersion = 25
-    minSdkVersion = 16
-    buildToolsVersion = "25.0.3"
-    support_library_version = "25.3.0"
+    compileSdkVersion = 26
+    minSdkVersion = 19
+    buildToolsVersion = "26.0.0"
+    support_library_version = "26.1.0"
     picasso_version = "2.5.2"
-    circleimageview_version = "2.1.0"
-    butterknife_version = "8.5.1"
-    stetho_version = "1.5.0"
-    textdrawable_version = "1.0.1"
-    leakcanary_version = "1.5.1"
-    glide_version = "3.7.0"
-    junit_version = "4.12"
-    espresso_version = "2.2.2"
-    firebasejobdispatcher_version = "0.5.2"
-    chuck_version = "1.0.0"
-    okhttp_version = "3.7.0"
-    gson_version = "2.8.0"
-    retrofit_version = "2.1.0"
+    gson_version = "2.8.1"
 }
