--- a/PR211-SQLiteRoom/build.gradle
+++ b/PR211-SQLiteRoom/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta5'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta7'
     }
 }
 
@@ -22,14 +22,14 @@ allprojects {
 ext {
     compileSdkVersion = 26
     minSdkVersion = 19
-    buildToolsVersion = "26.0.0"
+    buildToolsVersion = "26.0.2"
     support_library_version = "26.1.0"
-    constraintlayout_version = "1.0.2"
+    constraintlayout_version = "1.1.0-beta2"
     picasso_version = "2.5.2"
     circleimageview_version = "2.1.0"
     stetho_version = "1.5.0"
     textdrawable_version = "1.0.1"
-    arch_version = "1.0.0-alpha9"
+    arch_version = "1.0.0-beta1"
 }
 
 task clean(type: Delete) {
