--- a/PR153-DataBindingRecyclerView/app/src/main/AndroidManifest.xml
+++ b/PR153-DataBindingRecyclerView/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning"
+        android:fullBackupContent="@xml/backup_descriptor">
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name" >
