--- a/PR244-DataBindingLiveData/app/build.gradle
+++ b/PR244-DataBindingLiveData/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
+
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr244"
         minSdkVersion rootProject.ext.minSdkVersion
@@ -29,6 +31,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
+    implementation "com.android.support:design:$rootProject.ext.support_library_version"
+    implementation "com.squareup.picasso:picasso:$rootProject.ext.picasso_version"
     implementation "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintlayout_version"
     implementation "android.arch.lifecycle:extensions:$rootProject.ext.arch_version"
 }
