--- a/PR244-DataBindingLiveData/build.gradle
+++ b/PR244-DataBindingLiveData/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -27,9 +27,12 @@ task clean(type: Delete) {
 }
 
 ext {
-    compileSdkVersion = 26
-    minSdkVersion = 19
-    support_library_version = "27.1.0"
+    compileSdkVersion = 27
+    minSdkVersion = 21
+    buildToolsVersion = "27.0.3"
+    junit_version = "4.12"
+    support_library_version = "27.1.1"
     constraintlayout_version = "1.1.0"
+    picasso_version = "2.5.2"
     arch_version = "1.1.1"
 }
