--- a/PR244-DataBindingLiveData/app/src/main/AndroidManifest.xml
+++ b/PR244-DataBindingLiveData/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="es.iessaladillo.pedrojoya.pr244"
+<manifest xmlns:tools="http://schemas.android.com/tools"
+          package="es.iessaladillo.pedrojoya.pr244"
           xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -8,7 +11,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="@xml/backup_descriptor"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".main.MainActivity"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
