--- a/PR153-DataBindingRecyclerView/app/build.gradle
+++ b/PR153-DataBindingRecyclerView/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$rootProject.ext.room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$rootProject.ext.room_version"
     testImplementation "android.arch.persistence.room:testing:$rootProject.ext.room_version"
+    implementation "android.arch.lifecycle:common-java8:$rootProject.ext.arch_version"
 }
 
