--- a/PR246-Navigation/app/build.gradle
+++ b/PR246-Navigation/app/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     implementation 'android.arch.navigation:navigation-fragment:' + rootProject.navigation_version
     implementation 'android.arch.navigation:navigation-ui:' + rootProject.navigation_version
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 }
