--- a/PR229-ListAdapter/app/build.gradle
+++ b/PR229-ListAdapter/app/build.gradle
@@ -27,17 +27,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
-    implementation "com.android.support:design:$rootProject.ext.support_library_version"
-    implementation "com.android.support:recyclerview-v7:$rootProject.ext.support_library_version"
-    implementation "com.android.support:cardview-v7:$rootProject.ext.support_library_version"
-    implementation "com.squareup.picasso:picasso:$rootProject.ext.picasso_version"
-    implementation "de.hdodenhof:circleimageview:$rootProject.ext.circleimageview_version"
-    implementation "android.arch.lifecycle:extensions:$rootProject.ext.arch_version"
-    implementation "com.github.moove-it:fakeit:$rootProject.ext.fakeit_version"
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation "com.android.support:design:27.1.1"
+    implementation "com.android.support:recyclerview-v7:27.1.1"
+    implementation "com.android.support:cardview-v7:27.1.1"
+    implementation "com.squareup.picasso:picasso:2.5.2"
+    implementation "de.hdodenhof:circleimageview:2.2.0"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "com.github.moove-it:fakeit:v0.7"
 
-    testImplementation "junit:junit:$rootProject.ext.junit_version"
-    androidTestImplementation("com.android.support.test.espresso:espresso-core:$rootProject.ext.espresso_version", {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
 }
