--- a/PR017-AutoCompleteTextView/app/build.gradle
+++ b/PR017-AutoCompleteTextView/app/build.gradle
@@ -28,16 +28,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
-    implementation "android.arch.lifecycle:runtime:$rootProject.ext.arch_version"
-    implementation "android.arch.lifecycle:extensions:$rootProject.ext.arch_version"
-    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.ext.arch_version"
-    implementation "com.annimon:stream:$rootProject.ext.stream_version"
-
-    testImplementation "junit:junit:$rootProject.ext.junit_version"
-
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.ext.espresso_version"
-    androidTestImplementation "com.android.support:support-annotations:$rootProject.ext.support_library_version"
-    androidTestImplementation "com.android.support.test:runner:$rootProject.ext.support_test_version"
-    androidTestImplementation "com.android.support.test:rules:$rootProject.ext.support_test_version"
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "com.annimon:stream:1.2.1"
 }
