--- a/PR016-ExpandableListView/app/build.gradle
+++ b/PR016-ExpandableListView/app/build.gradle
@@ -18,11 +18,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+
     debugImplementation "com.squareup.leakcanary:leakcanary-android:1.6.1"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:1.6.1"
     testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:1.6.1"
