--- a/PR011-ListViewSimple/app/build.gradle
+++ b/PR011-ListViewSimple/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
     testImplementation "junit:junit:4.12"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation 'org.mockito:mockito-core:2.23.0'
 
     androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0-beta02"
     androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.1.0-beta02'
