--- a/PR011-ListViewSimple/app/build.gradle
+++ b/PR011-ListViewSimple/app/build.gradle
@@ -35,10 +35,10 @@ dependencies {
     testImplementation "org.hamcrest:hamcrest-all:1.3"
     testImplementation 'org.mockito:mockito-core:2.23.0'
 
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0-beta02"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0"
     androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.1.0-beta02'
-    androidTestImplementation "androidx.test:runner:1.1.0-beta02"
-    androidTestImplementation "androidx.test:rules:1.1.0-beta02"
+    androidTestImplementation "androidx.test:runner:1.1.0"
+    androidTestImplementation "androidx.test:rules:1.1.0"
     androidTestImplementation 'androidx.test.ext:junit:1.0.0-beta02'
     androidTestImplementation('com.schibsted.spain:barista:2.7.0') {
         exclude group: 'com.android.support'
