--- a/PR086-PopupMenu/app/src/main/AndroidManifest.xml
+++ b/PR086-PopupMenu/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         android:fullBackupContent="@xml/backup_descriptor">
         <activity
-            android:name="es.iessaladillo.pedrojoya.pr086.main.MainActivity"
+            android:name=".ui.main.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
