--- a/PR004-IntentsImplicitos/app/build.gradle
+++ b/PR004-IntentsImplicitos/app/build.gradle
@@ -28,9 +28,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:1.0.0"
+
     testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0-alpha4"
-    androidTestImplementation "androidx.test.espresso:espresso-intents:3.1.0-alpha4"
-    androidTestImplementation "androidx.test:runner:1.1.0-alpha4"
-    androidTestImplementation "androidx.test:rules:1.1.0-alpha4"
+
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
+    androidTestImplementation 'androidx.test:core:1.0.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.0.0'
 }
