--- a/PR152-PreferenceFragmentCompat/app/build.gradle
+++ b/PR152-PreferenceFragmentCompat/app/build.gradle
@@ -28,7 +28,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:1.0.0"
-    implementation "androidx.preference:preference:1.0.0"
+    implementation "androidx.preference:preference:1.1.0-alpha01"
     implementation "androidx.legacy:legacy-preference-v14:1.0.0"
     implementation "com.google.android.material:material:1.0.0"
     implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha2"
