--- a/PR086-PopupMenu/app/src/main/AndroidManifest.xml
+++ b/PR086-PopupMenu/app/src/main/AndroidManifest.xml
@@ -3,7 +3,11 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="es.iessaladillo.pedrojoya.pr086" >
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:name="App"
+        android:supportsRtl="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
