--- a/PR057-ContextualActionMode/app/src/main/AndroidManifest.xml
+++ b/PR057-ContextualActionMode/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="es.iessaladillo.pedrojoya.pr057" >
     <application
+        android:name=".App"
         android:allowBackup="true"
+        android:supportsRtl="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
