--- a/PR123-MaterialToolbarDropdown/app/build.gradle
+++ b/PR123-MaterialToolbarDropdown/app/build.gradle
@@ -28,6 +28,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.0.0"
+    implementation "androidx.appcompat:appcompat:1.0.2"
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation "androidx.fragment:fragment:1.1.0-alpha03"
 }
